add_subdirectory(SimpleFactory)
add_subdirectory(FactoryMethod)
add_subdirectory(AbstractFactory)
add_subdirectory(Builder)
add_subdirectory(Singleton)
add_subdirectory(Adapter)
add_subdirectory(Bridge)
add_subdirectory(Decorator)
add_subdirectory(Facade)
add_subdirectory(Flyweight)
add_subdirectory(Proxy)
add_subdirectory(Command)
add_subdirectory(Mediator)
add_subdirectory(Obeserver)
add_subdirectory(State)
add_subdirectory(Strategy)